EKS/DeployEks/Deploymentfiles/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxatc
  namespace: atcprojectdeploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: rockiee/atcprojectngnix:prod
        ports:
        - containerPort: 80
