EKS/DeployEks/Deploymentfiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: atcprojectdeploy
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
